Revision history for {{$dist->name}}

{{$NEXT}}

1.101451  2010-05-25 22:38:06 America/New_York
          always finalize sections added by bundles

1.101450  2010-05-25 18:13:19 America/New_York
          [BREAKS BACKWARD COMPATIBILITY]

          The Reader interface has been substantially overhauled.

          Readers no longer have persistent Assembler, but now must be handed
          one (or will generate one as needed)

          the arguments for Reader->read_config have changed

          classes implementing Reader are required to provide a
          read_into_assembler method, now

          Reader::Findable has been broken into Findable and
          Findable::ByExtension

0.101410  2010-05-21 22:09:48 America/New_York
          Sections, Sequences, and Assemblers  can now be finalized

          the Assembler finalizes things as appropriate

          Sections can refer to their containing Sequence

          Sequences can refer to their constructing Assembler

          bundles now can (and should) provide payload as an arrayref

          Assembler->begin_section can be given a reference to a package name
          to skip rewriting

          the replace_bundle_with_contents method is used by
          Assembler::WithBundles to convert bundle sections into contents

0.100780  2010-03-19 22:16:16 America/New_York
          the alias attr on Section is now lazy so that mvp_aliases is called

0.093350  2009-12-01 06:58:48 America/New_York
          added Config::MVP::Reader::Hash for use by adapter writers

0.093330  2009-11-29 17:40:08 America/New_York
          rebuild to include META.yml for sake of cpandeps scanner

0.093120  2009-11-08
          add missing prereq

0.093000  2009-10-27
          bundles for Assembler::WithBundles can now be nested

0.092990  2009-10-26
          add Config::MVP::Reader and associated packages, from Dist::Zilla

0.092360  2009-08-24
          add "begin_section" and "end_section" methods, mostly for wrapping