@@ -10,4 +10,4 @@ Module::Pluggable::Object = 0 ; min ver unknown
 Test::More = 0.88
 
 [@RJBS]
-version = 1
+version = 2
