@@ -1,15 +1,78 @@
 package Config::MVP::Reader;
-use Moose::Role;
-# ABSTRACT: role to load MVP-style config from a file
+use Moose;
+# ABSTRACT: object to read config from storage into an assembler
 
 use Config::MVP::Assembler;
 
+=head1 SYNOPSIS
+
+  use Config::MVP::Reader::YAML; # this doesn't really exist
+
+  my $reader   = Config::MVP::Reader::YAML->new;
+
+  my $sequence = $reader->read_config('/etc/foobar.yml');
+
 =head1 DESCRIPTION
 
-The config role provides some helpers for writing a configuration loader using
-the L<Config::MVP|Config::MVP> system to load and validate its configuration.
-It delegates assembly of the configuration sequence to an Assembler.  The
-Reader is responsible for opening, reading, and interpreting a file.
+A Config::MVP::Reader exists to read configuration data from storage (like a
+file) and convert that data into instructions to a L<Config::MVP::Assembler>,
+which will in turn convert them into a L<Config::MVP::Sequence>, the final
+product.
+
+=method read_config
+
+  my $sequence = $reader->read_config($location, \%arg);
+
+This method is passed a location, which has no set meaning, but should be the
+mechanism by which the Reader is told how to locate configuration.  It might be
+a file name, a hashref of parameters, a DBH, or anything else, depending on the
+needs of the specific Reader subclass.
+
+It is also passed a hashref of arguments, of which there is only one valid
+argument:
+
+ assembler - the Assembler object into which to read the config
+
+If no assembler argument is passed, one will be constructed by calling the
+Reader's C<build_assembler> method.
+
+Subclasses should generally not override C<read_config>, but should instead
+implement a C<read_into_assembler> method, described below.
+
+=cut
+
+sub read_config {
+  my ($self, $location, $arg) = @_;
+  $arg ||= {};
+
+  $self = $self->new unless blessed $self;
+
+  my $assembler = $arg->{assembler} || $self->build_assembler;
+
+  $self->read_into_assembler($location, $assembler);
+
+  return $assembler->sequence;
+}
+
+=method read_into_assembler
+
+This method should not be called directly.  It is called by C<read_config> with
+the following parameters:
+
+  my $sequence = $reader->read_into_assembler( $location, $assembler );
+
+The method should read the configuration found at C<$location> and use it to
+instruct the C<$assembler> (a L<Config::MVP::Assembler>) what configuration to
+perform.
+
+The default implementation of this method will throw an exception complaining
+that it should have been implemented by a subclass.
+
+=cut
+
+sub read_into_assembler {
+  confess 'required method read_into_assembler unimplemented'
+}
 
 =method build_assembler
 
@@ -23,22 +86,5 @@ entirely generic one.
 
 sub build_assembler { Config::MVP::Assembler->new; }
 
-=method read_config
-
-  my $sequence = $reader->read_config($location, \%arg);
-
-=cut
-
-sub read_config {
-  my ($self, $location, $arg) = @_;
-  $arg ||= {};
-
-  my $assembler = $arg->{assembler} || $self->build_assembler;
-
-  $self->read_into_assembler($location, $assembler);
-}
-
-requires 'read_into_assembler';
-
-no Moose::Role;
+no Moose;
 1;
